--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,3 @@
-/* ----------------------------------------------------------------
-	Custom CSS
-
-	Add all your Custom Styled CSS here for New Styles or
-	Overwriting Default Theme Styles for Better Handling Updates
------------------------------------------------------------------*/
-
-
+.header-row{
+	justify-content: space-between;
+}
