--- a/css/dark.css
+++ b/css/dark.css
@@ -127,17 +127,15 @@ body #side-panel.dark {
 
 	.dark #header.full-header,
 	#header.full-header.dark {
-		border-bottom-color: rgba(255,255,255,0.15);
+		/* border-bottom-color: rgba(255,255,255,0.15); */
 	}
 
 	.dark #header.transparent-header.full-header #header-wrap,
 	#header.transparent-header.full-header.dark #header-wrap {
-		border-bottom-color: rgba(255,255,255,0.15);
 	}
 
 	#slider + .dark #header.transparent-header.full-header #header-wrap,
 	#slider + #header.transparent-header.full-header.dark #header-wrap {
-		border-top-color: rgba(255,255,255,0.15);
 	}
 
 	.dark .sticky-header #header-wrap
@@ -194,7 +192,7 @@ body #side-panel.dark {
 
 	.dark #header.transparent-header.full-header #logo,
 	#header.transparent-header.full-header.dark #logo {
-		border-color: rgba(255,255,255,0.15);
+		border-color: transparent;
 	}
 
 }
@@ -259,7 +257,7 @@ body #side-panel.dark {
 
 	.dark .transparent-header.full-header .primary-menu .menu-container,
 	.transparent-header.full-header.dark .primary-menu .menu-container {
-		border-color: rgba(255,255,255,0.2);
+		border-color: transparent;
 	}
 
 	.dark .primary-menu:not(.not-dark) .sub-menu-container,
