--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ dl, dt, dd, ol, ul, li {
 body {
 	line-height: 1.5;
 	color: #555;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -3405,7 +3405,6 @@ html[xmlns] .slider-wrap {
 	display: flex;
 	align-items: center;
 	-ms-flex-align: center;
-	margin-right: auto;
 	max-height: 100%;
 }
 
